# WSL-Learn

./: .gitignore  lanchJsonTemplate.json  readme.md  taskJsonTemplate.json
CMake/: note.md
CMake/5.3/5.3.1/: CMakeLists.txt  helloworld.out
CMake/5.3/5.3.2/: CMakeLists.txt  main  main.cpp
CMake/GCC_Demo_Swap/: a.out  b.out  c.out  d.out  main.c
CMake/GCC_Demo_Swap/include/: swap.h
CMake/GCC_Demo_Swap/src/: swap.c
CMake/GDB_Demo_sum/: a.out  main.c
CMake/SoldierSortie/: CMakeLists.txt  main.cpp
CMake/SoldierSortie/include/: gun.h  soldier.h
CMake/SoldierSortie/src/: gun.cpp  soldier.cpp
CMake/compileProgress/: gcc编译参数.md  optimizedTest  test.i  testWithDebug  编译过程.md
Cpp/testOpenCV/: CMakeLists.txt  main  main.cpp
Make/example1/: global.h  main.c  makefile
Make/example2/: main  main.c  main.i  t1.c  t1.h  t1.i
Make/example3/: main  main.c  makefile  max.c
Make/example4/: main  makefile
Make/example4/headers/: global.h  max.h
Make/example4/sources/: main.c  max.c
ROS/can_ws/devel/: .catkin  local_setup.sh  setup.sh
ROS/catkin_ws/devel/: .catkin  setup.sh
ROS/commonApis/devel/: .rosinstall  local_setup.sh  setup.sh
ROS/customized_msg/: 步骤.md
ROS/customized_msg/devel/: .catkin  _setup_util.py
ROS/demo01_ws/devel/: .catkin  .rosinstall  local_setup.sh
ROS/demo02_ws/devel/: .catkin  local_setup.sh
ROS/paramServer/devel/: .catkin  .rosinstall  local_setup.sh
ROS/serviceCommunicationDemo/devel/: .catkin  local_setup.sh  setup.sh
ROS/topicCommunicationDemo01/devel/: .catkin  setup.sh
ROS/turtleCircleExperiment/devel/: .catkin  setup.sh
ROS2/ars408_ws/install/: local_setup.sh  setup.sh
ROS2/ars408_ws/log/: latest_build
ROS2/can_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/can_ws/log/: latest_build  latest_list
ROS2/decode_ws/install/: local_setup.sh  setup.sh
ROS2/decode_ws/log/: latest_build  latest_list
ROS2/decode_ws/src/h264_decode/: CMakeLists.txt
ROS2/decode_ws/src/h264_decode/src/: decoder_node.cpp
ROS2/encode_ws/install/: local_setup.sh  setup.sh
ROS2/encode_ws/log/: latest_build
ROS2/enet_driver_ws/install/: local_setup.sh  setup.sh
ROS2/enet_driver_ws/log/: latest_build  latest_list
ROS2/ethernet_ws/install/: local_setup.sh  setup.sh
ROS2/ethernet_ws/install/my_ethernet_utils/share/my_ethernet_utils/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/ethernet_ws/log/: latest_build
ROS2/inject_ws/install/: local_setup.sh  setup.sh
ROS2/inject_ws/log/: latest_build  latest_list
ROS2/install/: local_setup.sh  setup.sh
ROS2/log/: latest_build
ROS2/record_ws/can_message/: can_message_0.db3  metadata.yaml
ROS2/record_ws/install/: local_setup.sh  setup.sh
ROS2/record_ws/install/my_record_utils/share/my_record_utils/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/record_ws/install/my_record_utils/share/my_record_utils/config/: config.yaml  topics_config.yaml
ROS2/record_ws/install/my_record_utils/share/my_record_utils/launch/: player.launch.py  recorder.launch.py
ROS2/record_ws/log/: latest_build
ROS2/record_ws/my_bag/: metadata.yaml  my_bag_0.db3
ROS2/record_ws/record_message/: metadata.yaml
ROS2/resources/can/: ars408.txt  create_vcan.sh  play_log.sh  play_vcan0.sh  play_vcan1.sh  radar.csv  watch_log.bash
ROS2/socketcan_ws/install/: local_setup.sh  setup.sh
ROS2/socketcan_ws/log/: latest_build  latest_list
ROS2/sync_ws/install/: local_setup.sh  setup.sh
ROS2/sync_ws/log/: latest_build  latest_list
ROS2/test_rosbag_ws/can_bag/: can_bag_0.db3  metadata.yaml
ROS2/test_rosbag_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cs61a/homework/hw01/: hw01.py  (+1 more)
(+407 files in other folders)
